# test-task

./: CMakeLists.txt  LICENSE  README.md
app/: main.cpp
buildedApp/: config.yaml  input_large.txt  input_small.txt  main  unit_tests
cmake/: Doctest.cmake  Yaml.cmake
include/: config.h  file_input_tape.h  file_output_tape.h  file_tape.h  i_input_tape.h  i_output_tape.h  i_tape.h  sorter.h  tmp_file.h
src/: config.cpp  file_input_tape.cpp  file_output_tape.cpp  file_tape.cpp  sorter.cpp  tmp_file.cpp
test/: CMakeLists.txt  sort_test.cpp  test_file_tape.cpp  test_util.cpp  test_util.h
